Fix small layout bug, in the biggest screen i increase the height of the input container

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -108,7 +108,7 @@
 //VIRTUAL KEYBOARD
 
 .keyboard_container {
-  top: 10%;
+  top: 15%;
   left: 60%;
   position: absolute;
   width: 35%;
